# chat-etl

./: README.md  pyproject.toml
src/chat_etl/: consumer.py  custom_sample_data.json  log_sender.py  produce.py  spark_stream.py
src/chat_etl/sl/: ad_page.py
